WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
45360
chromium/mac: Fix overrelease in ImageLayerChromium
https://bugs.webkit.org/show_bug.cgi?id=45360
Summary
chromium/mac: Fix overrelease in ImageLayerChromium
Nico Weber
Reported
2010-09-07 19:42:24 PDT
chromium/mac: Fix overrelease in ImageLayerChromium
Attachments
Patch
(2.64 KB, patch)
2010-09-07 19:43 PDT
,
Nico Weber
no flags
Details
Formatted Diff
Diff
Patch
(2.64 KB, patch)
2010-09-07 19:59 PDT
,
Nico Weber
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Nico Weber
Comment 1
2010-09-07 19:43:40 PDT
Created
attachment 66831
[details]
Patch
Kenneth Russell
Comment 2
2010-09-07 19:51:50 PDT
Comment on
attachment 66831
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=66831&action=prettypatch
> WebCore/platform/graphics/chromium/ImageLayerChromium.cpp:112 > + CGColorSpaceRef> colorSpace = CGImageGetColorSpace(cgImage);
Um, does this compile? If not, how was this fix tested?
Nico Weber
Comment 3
2010-09-07 19:59:30 PDT
Created
attachment 66835
[details]
Patch
Nico Weber
Comment 4
2010-09-07 20:01:15 PDT
(In reply to
comment #2
)
> (From update of
attachment 66831
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=66831&action=prettypatch
> > > WebCore/platform/graphics/chromium/ImageLayerChromium.cpp:112 > > + CGColorSpaceRef> colorSpace = CGImageGetColorSpace(cgImage); > Um, does this compile? If not, how was this fix tested?
Oops :-) I have a very sophisticated system where I do my changes in third_party/WebKit/WebCore for developing / testing and then I have a separate git WebKit checkout I upload my patches from. I copied the patch over to early and then tried to manually redo what I changed to get this to compile. Looks like I missed one place. Fixed.
Dimitri Glazkov (Google)
Comment 5
2010-09-08 10:57:41 PDT
Comment on
attachment 66835
[details]
Patch I _think_ I understand what you're doing here.
WebKit Commit Bot
Comment 6
2010-09-08 14:26:27 PDT
Comment on
attachment 66835
[details]
Patch Clearing flags on attachment: 66835 Committed
r67015
: <
http://trac.webkit.org/changeset/67015
>
WebKit Commit Bot
Comment 7
2010-09-08 14:26:31 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug