2010-09-08  Nico Weber  <thakis@chromium.org>

Reviewed by Dimitri Glazkov.

        chromium/mac: Fix overrelease in ImageLayerChromium
        https://bugs.webkit.org/show_bug.cgi?id=45360

        Only release colorSpace if we created it.

        * platform/graphics/chromium/ImageLayerChromium.cpp:
        (WebCore::ImageLayerChromium::updateContents):

Canonical link: https://commits.webkit.org/57764@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67015 268f45cc-cd09-0410-ab3c-d52691b4dbfc