WebCore/platform/graphics/chromium/ImageLayerChromium.cpp
@@ -108,8 +108,9 @@ void ImageLayerChromium::updateContents()
     // completely overwrite its contents with the image below.
     // Try to reuse the color space from the image to preserve its colors.
     // Some images use a color space (such as indexed) unsupported by the bitmap context.
-    RetainPtr<CGColorSpaceRef> colorSpace(AdoptCF, CGImageGetColorSpace(cgImage));
-    CGColorSpaceModel colorSpaceModel = CGColorSpaceGetModel(colorSpace.get());
+    RetainPtr<CGColorSpaceRef> colorSpaceReleaser;
+    CGColorSpaceRef colorSpace = CGImageGetColorSpace(cgImage);
+    CGColorSpaceModel colorSpaceModel = CGColorSpaceGetModel(colorSpace);
     switch (colorSpaceModel) {
     case kCGColorSpaceModelMonochrome:
     case kCGColorSpaceModelRGB:
@@ -118,12 +119,13 @@ void ImageLayerChromium::updateContents()
     case kCGColorSpaceModelDeviceN:
         break;
     default:
-        colorSpace.adoptCF(CGColorSpaceCreateDeviceRGB());
+        colorSpaceReleaser.adoptCF(CGColorSpaceCreateDeviceRGB());
+        colorSpace = colorSpaceReleaser.get();
         break;
     }
     RetainPtr<CGContextRef> tempContext(AdoptCF, CGBitmapContextCreate(tempVector.data(),
                                                                        width, height, 8, tempRowBytes,
-                                                                       colorSpace.get(),
+                                                                       colorSpace,
                                                                        kCGImageAlphaPremultipliedLast));
     CGContextSetBlendMode(tempContext.get(), kCGBlendModeCopy);
     CGContextDrawImage(tempContext.get(),
